--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,11 +1,35 @@
+@font-face {
+  font-family: 'Remixica';
+  font-weight: 400 500;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: 'Medium';
+  src: url(/fonts/HelveticaRemix-Medium.woff2) format("woff2");
+}
+@font-face {
+  font-family: 'Remixica';
+  font-weight: 600 700;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: 'Bold';
+  src: url(/fonts/HelveticaRemix-Bold.woff2) format("woff2");
+}
+@font-face {
+  font-family: 'Remixica';
+  font-weight: 800;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: 'Extra Bold';
+  src: url(/fonts/HelveticaRemix-ExtraBold.woff2) format("woff2");
+}
 :root {
   --border-radius: 4px;
-  --color-text: #333;
-  --color-primary: #7026b9;
-  --color-code-bg: #fff4db;
-  --color-code: #8a6534;
-  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+  --color-bg: #000;
+  --color-text: #fff;
+  --color-primary: #4c0e17;
+  --font-sans: 'Remixica', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  --font-serif: "Times New Roman";
   --font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
     "Courier New", monospace;
   --font-lg: 18px;
@@ -14,7 +38,7 @@
   --font-sx: 12px;
   --line-height-loose: 1.75;
   --line-height-normal: 1.5;
-  --line-height-dense: 1.1;
+  --line-height-dense: 0.92;
   --space-1: 4px;
   --space-2: 8px;
   --space-3: 16px;
@@ -32,6 +56,8 @@ html {
   font-size: var(--font-md);
   line-height: var(--line-height-normal);
   overflow-y: scroll;
+  background: var(--color-bg);
+  height: 100%;
 }
 body {
   -moz-osx-font-smoothing: grayscale;
@@ -43,14 +69,177 @@ body {
   margin: 0;
   word-wrap: break-word;
 }
+header {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  width: 100vw;
+}
+.view {
+  display: flex;
+}
+.view > div {
+  width: 50%;
+}
+.view:first-child {
+  padding: 60px;
+}
+.visualizer {
+  background-color: var(--color-primary);
+}
+.section-header {
+  margin-bottom: 20px
+}
+.hero {
+  width: 658px;
+  /* padding: 0 43px; */
+  margin: 6em auto 21em;
+  position: relative;
+}
+.content {
+  margin: 60px;
+}
+.mission,.artists,.organizations,.tickets,.partners {
+  margin-bottom: 20em;
+}
+.mission,.artists {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.organizations > .section-header, .organizations > .section-header {
+  margin-left: 20px;
+}
+.lineup {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 35px;
+}
+.lineup > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.lineup-h1 {
+  font-size: 50px;
+  font-weight: 800;
+}
+.lineup-h2 {
+  font-size: 32px;
+  font-weight: 800;
+}
+.lineup-h3 {
+  font-size: 24px;
+  font-weight: 800;
+}
+.lineup-title {
+  margin: 0 auto 10px;
+  font-size: 12px;
+  font-weight: 800;
+  text-transform: uppercase;
+  text-align: center;
+}
+.organizations-container {
+  width: 100%;
+  display: flex;
+}
+.organizations-container > a {
+  margin: 0 7px;
+}
+.organizations-card {
+  border: 1px solid #FFFFFF;
+  background-color: #000000;
+  width: 238px;
+  height: fit-content;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  transition: all 0.2s ease;
+  transform: translate(0px, 0px);
+  box-shadow: 0px 0px 0 rgba(255,255,255,0);
+}
+.organizations-card:hover {
+  background-color: #262626;
+  transform:translate(-2px, -2px);
+  box-shadow: 2px 2px 0 rgba(255,255,255,255);
+}
+.organizations-card:first-of-type {
+  margin-left: 0;
+}
+.organizations-card:last-of-type {
+  margin-right: 0;
+}
+.organization-image {
+  margin-bottom: 12px; 
+}
+.tickets-features {
+  display: flex;
+  justify-content: space-between;
+}
+.hero-image-0 {
+  z-index: -1;
+  position: absolute;
+  top: 8.75em;
+  left: -2.5em;
+}
+.hero-image-1 {
+  z-index: -1;
+  position: absolute;
+  top: 30em;
+  right: -2.5em;
+}
+.hero-eyebrow {
+  text-align: center;
+  font-size: 24px;
+  letter-spacing: -0.06em;
+  font-family: var(--font-serif);
+}
+.hero-caption {
+  font-size: 28px;
+  font-weight: bold;
+}
+.hero-caption:last-of-type {
+  margin-top: 7.3em;
+  text-align: right;
+}
+.button {
+  border: 1px solid #FFFFFF;
+  font-size: 32px;
+  font-weight: 500;
+  padding: 40px 50px;
+  width: 100%;
+  display: flex;
+  transition: all 0.2s ease;
+  transform: translate(0px, 0px);
+  box-shadow: 0px 0px 0 rgba(255,255,255,0);
+}
+.button:hover {
+  background-color: #262626;
+  transform:translate(-2px, -2px);
+  box-shadow: 2px 2px 0 rgba(255,255,255,255);
+}
+.tickets-features > ul {
+  width: 50%;
+  margin-top: 1em;
+  font-size: 24px;
+  font-weight: 500;
+}
+.tickets-features > ul > li {
+  margin-bottom: 0.5em;
+}
 a {
   background-color: transparent;
-  color: var(--color-primary);
+  color: var(--color-text);
   text-decoration: none;
-  font-weight: 500;
-  text-decoration: underline;
+  /* text-decoration: underline;
   text-decoration-thickness: 1.5px;
-  text-underline-offset: 2px;
+  text-underline-offset: 2px; */
 }
 a:active,
 a:hover {
@@ -72,13 +261,37 @@ dfn {
 }
 h1 {
   margin: 0;
-  margin-bottom: 3rem;
+  margin-bottom: 85px;
   padding: 0;
+  font-size: 91px;
+  text-transform: uppercase;
+  font-weight: 800;
+  text-align: center;
   line-height: var(--line-height-dense);
-  letter-spacing: -0.01em;
+  letter-spacing: -0.03em;
 }
 h1 > b {
   color: var(--color-primary);
+}
+h2 {
+  font-size: 29px;
+  margin: 0;
+  margin-bottom: 30px;
+  font-weight: 800;
+  line-height: 1.4em;
+}
+h3 {
+  font-size: 24px;
+  font-weight: 800;
+  margin: 0 0 13px;
+}
+h3 a {
+  text-decoration: underline;
+}
+p {
+  font-size: 12px;
+  font-weight: 500;
+  margin-bottom: 0;
 }
 img {
   border-style: none;
@@ -124,7 +337,6 @@ dd,
 p {
   margin: 0;
   padding: 0;
-  margin-bottom: var(--space-4);
 }
 ul,
 ol {
