updated copy and added read more to mission section

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -199,6 +199,21 @@ header {
   display: flex;
   justify-content: space-between;
 }
+.mission ul {
+  font-weight: 800;
+  font-size: 1.7em;
+  margin-top: 1em;
+  margin-bottom: 1.5em;
+}
+.mission a {
+  text-decoration: underline;
+}
+.tickets {
+  height: 555px;
+}
+.tickets-features > ul {
+  width: 50%;
+}
 .hero-image-0 {
   z-index: -1;
   position: absolute !important;
@@ -241,14 +256,19 @@ header {
   transform:translate(-2px, -2px);
   box-shadow: 2px 2px 0 rgba(255,255,255,255);
 }
-.tickets-features > ul {
-  width: 50%;
-  margin-top: 1em;
-  font-size: 24px;
-  font-weight: 500;
+.link-button {
+  font-size: 17px;
+  text-decoration: underline;
+  padding: 10px 0;
+  transition: all 0.5s ease;
+  border-radius: 4px;
+  cursor: pointer;
 }
-.tickets-features > ul > li {
-  margin-bottom: 0.5em;
+.link-button:hover {
+  margin-right: 8px;
+  padding: 10px 12px;
+  margin-left: -12px;
+  background: #262626;
 }
 a {
   background-color: transparent;
@@ -405,6 +425,14 @@ p *:last-child {
 li > p {
   margin-bottom: calc(var(--space-4) / 2);
 }
+ul {
+  margin-top: 1em;
+  font-size: 24px;
+  font-weight: 500;
+}
+ul > li {
+  margin-bottom: 0.5em;
+}
 p {
   max-width: 680px;
 }
@@ -491,6 +519,7 @@ pre tt:after {
   .organizations, .tickets {
     padding: 0 20px;
   }
+
   .organizations > .section-header {
     margin-left: 0;
   }
@@ -638,6 +667,9 @@ pre tt:after {
     white-space: pre-wrap;
   }
   .hero {
-    margin-top: calc(50vh - 170px);
+    /* margin-top: calc(50vh - 170px); */
+    /* position: relative; */
+    /* top: 50%;
+    transform: translateY(-50%); */
   }
 }
