--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -676,3 +676,11 @@ pre tt:after {
     /* transform: translateY(-50%); */
   }
 }
+
+.fullpage {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
