--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -58,6 +58,7 @@ html {
   overflow-y: scroll;
   background: var(--color-bg);
   height: 100%;
+  height: -webkit-fill-available;
 }
 body {
   -moz-osx-font-smoothing: grayscale;
@@ -68,6 +69,9 @@ body {
   font-weight: normal;
   margin: 0;
   word-wrap: break-word;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+
 }
 header {
   font-size: 24px;
@@ -261,11 +265,40 @@ header {
 }
 .link-button {
   font-size: 17px;
+  font-weight: 700;
   text-decoration: underline;
   padding: 10px 0;
   transition: all 0.5s ease;
   border-radius: 4px;
   cursor: pointer;
+}
+.from-above {
+  font-size: 22px;
+  font-weight: 800;
+  text-decoration: underline;
+  padding: 10px;
+  transition: all 0.5s ease;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  cursor: pointer;
+  /* transform: scale(1); */
+  height: 59.85px;
+}
+.from-above:hover {
+  padding: 10px 12px;
+  background: #262626;
+  border: 3px solid transparent;
+  /* transform: scale(1.05); */
+  /* transform-origin: bottom; */
+  cursor: pointer;
+
+}
+.down-arrow::after {
+  content: "↓";
+  font-size: 19px;
+  transform: scaleY(1.1);
+  border-left: 4px solid transparent;
+  display: inline-block;
 }
 .link-button:hover {
   margin-right: 8px;
@@ -539,7 +572,7 @@ pre tt:after {
   }
   h1 {
     margin: 0 auto;
-    margin-bottom: 8.9vw;
+    margin-bottom: 16vw;
     padding: 0;
     font-size: max(51px, 12vw);
     /* width: min(80vw, 658px); */
@@ -599,7 +632,7 @@ pre tt:after {
     margin: 0 auto;
   }
   .hero-caption:last-of-type {
-    margin-top: 20.5vw;
+    margin-top: 19.3vw;
     text-align: right;
   }
   .hero-image-0 {
@@ -681,6 +714,7 @@ pre tt:after {
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
