--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -165,12 +165,13 @@ header {
 }
 .organizations-container {
   display: flex;
+  flex-direction: column;
   position: relative;
-  width: 47vw;
-  left: calc(-23.5vw + 50%);
+  /* width: 47vw; */
+  /* left: calc(-23.5vw + 50%); */
 }
 .organizations-container > a {
-  margin: 0 7px;
+  margin: 10px 0;
 }
 .organizations-card {
   border: 1px solid #FFFFFF;
@@ -179,7 +180,9 @@ header {
   height: fit-content;
   padding: 30px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
   transition: all 0.2s ease;
   transform: translate(0px, 0px);
   box-shadow: 0px 0px 0 rgba(255,255,255,0);
@@ -190,17 +193,19 @@ header {
   transform:translate(-2px, -2px);
   box-shadow: 2px 2px 0 rgba(255,255,255,255);
 }
-.organizations-container > a:first-of-type {
+/* .organizations-container > a:first-of-type {
   margin-left: 0;
 }
 .organizations-container > a:last-of-type {
   margin-right: 0;
-}
+} */
 .organizations-card > div > p {
-  font-size: 14px;
+  font-size: 16px;
 }
 .organization-image {
-  margin-bottom: 12px; 
+  margin-right: 30px; 
+  width: 200px;
+  height: 150px;
 }
 .tickets-features {
   display: flex;
@@ -220,6 +225,12 @@ header {
 }
 .tickets-features > ul {
   width: 50%;
+}
+.tickets-profit {
+  margin-top: 2em;
+}
+.tickets-profit > ul {
+  margin-top: 0;
 }
 .hero-image-0 {
   z-index: -1;
@@ -297,8 +308,11 @@ header {
   content: "↓";
   font-size: 19px;
   transform: scaleY(1.1);
-  border-left: 4px solid transparent;
   display: inline-block;
+  position: relative;
+  top: 1px;
+  border-left: 4px solid transparent;
+  /* display: inline-block; */
 }
 .link-button:hover {
   margin-right: 8px;
@@ -519,18 +533,6 @@ pre tt:after {
   html {
     overflow-x: hidden;
   }
-  .organizations-container {
-    flex-direction: column;
-    width: 100%;
-    position: initial;
-    left: 0;
-  }
-  .organizations-card {
-    /* flex-direction: row; */
-  }
-  .organizations-container > a {
-    margin: 0 0 7px;
-  }
   /* .organization-image {
     max-height: 200px !important;
     max-width: 75px !important;
@@ -539,7 +541,7 @@ pre tt:after {
   } */
   .button {
     font-size: 2em;
-    width: 100%;
+    /* margin: 0 */
     /* margin: 0 20px; */
   }
   .visualizer {
@@ -572,9 +574,9 @@ pre tt:after {
   }
   h1 {
     margin: 0 auto;
-    margin-bottom: 16vw;
+    /* margin-bottom: 16vw; */
     padding: 0;
-    font-size: max(51px, 12vw);
+    font-size: max(51px, 11.7vw);
     /* width: min(80vw, 658px); */
     text-transform: uppercase;
     font-weight: 800;
@@ -620,36 +622,39 @@ pre tt:after {
   }
   .hero-eyebrow {
     text-align: center;
-    font-size: max(18px,2vw);
+    font-size: max(18px,3vw);
     letter-spacing: -0.06em;
     font-family: var(--font-serif);
   }
   .hero-caption {
     /* font-size: max(3vw, 17px); */
-    font-size: 3vw;
+    font-size: 3.4vw;
     font-weight: bold;
-    width: min(69vw, 68%);
+    /* width: min(69vw, 68%); */
+    width: 75%;
     margin: 0 auto;
+    position: relative;
+    top: 10.5vw;
   }
   .hero-caption:last-of-type {
-    margin-top: 19.3vw;
+    top: 11vw;
     text-align: right;
   }
   .hero-image-0 {
     z-index: -1;
     position: absolute !important;
-    top: 25vw;
-    width: 100%;
-    max-width: 66vw;
-    left: 8vw;
+    top: 18.4vw;
+    width: 78vw;
+    height: 52vw;
+    left: 5vw;
   }
   .hero-image-1 {
     z-index: -1;
     position: absolute !important;
-    top: 60vw;
-    width: 100%;
-    max-width: 37vw;
-    right: 9vw;
+    top: 60.6vw;
+    width: 43vw;
+    height: 32.35vw;
+    right: 4vw;
   }
   /* .hero-image-0 {
     z-index: -1;
@@ -693,6 +698,25 @@ pre tt:after {
   .lineup a {
     text-decoration: underline;
   }
+  .organizations-container {
+    flex-direction: column;
+    width: 100%;
+    position: initial;
+    left: 0;
+  }
+  .organizations-card {
+    flex-direction: column;
+    margin: 5px;
+  }
+  .organization-image {
+    width: 100%;
+    height: 100%;
+    margin-right: 0;
+    margin-bottom: 13px;
+  }
+  .organizations-container > a {
+    margin: 0 0 7px;
+  }
 }
 
 @media(max-width: 500px) {
@@ -707,6 +731,9 @@ pre tt:after {
     /* position: relative; */
     /* top: 50%; */
     /* transform: translateY(-50%); */
+  }
+  .h1 {
+    margin-bottom: 
   }
 }
 
