--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -288,7 +288,7 @@ header > div:first-child {
   position: relative;
 }
 .tickets-features > ul > li::before {
-  content: "✴";
+  content: "✴&#xFE0E;";
   font-family: 'Segoe UI Symbol';
   left: 8px;
   position: absolute;
@@ -300,7 +300,7 @@ header > div:first-child {
   position: relative;
 }
 .tickets-profit::before {
-  content: "ℹ";
+  content: "ℹ&#xFE0E;";
   font-size: 40px;
   font-family: 'Segoe UI Symbol';
   border: 1px solid white;
@@ -617,7 +617,7 @@ pre tt:after {
   content: none;
 }
 @media(max-width: 1370px) {
-  html, body {
+  html {
     overflow-x: hidden;
   }
   /* .organization-image {
