--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -288,7 +288,7 @@ header > div:first-child {
   position: relative;
 }
 .tickets-features > ul > li::before {
-  content: "✴&#xFE0E;";
+  content: "✴";
   font-family: 'Segoe UI Symbol';
   left: 8px;
   position: absolute;
@@ -300,7 +300,7 @@ header > div:first-child {
   position: relative;
 }
 .tickets-profit::before {
-  content: "ℹ&#xFE0E;";
+  content: "ℹ";
   font-size: 40px;
   font-family: 'Segoe UI Symbol';
   border: 1px solid white;
