updated copy and hero positioning on large screens

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -141,7 +141,7 @@ header > div:first-child {
 .hero {
   width: 658px;
   /* padding: 0 43px; */
-  margin: 6em auto 21em;
+  margin: calc(50vh - 370px) auto 30vh;
   position: relative;
 }
 .content {
@@ -347,7 +347,7 @@ header > div:first-child {
   font-weight: bold;
 }
 .hero-caption:last-of-type {
-  margin-top: 7.3em;
+  margin-top: 5.7em;
   text-align: right;
 }
 .button {
