--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -169,7 +169,7 @@ header > div:first-child {
   margin-bottom: 30px;
 }
 .lineup-h1 {
-  font-size: 2.89vw;
+  font-size: 2.2vw;
   font-weight: 800;
 }
 .lineup-h2 {
@@ -179,6 +179,9 @@ header > div:first-child {
 .lineup-h3 {
   font-size: 1.38vw;
   font-weight: 800;
+}
+.lineup a {
+  text-decoration: underline;
 }
 .lineup a:hover {
   animation: underline 0.8s infinite both;
