--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -336,6 +336,43 @@ header > div:first-child {
 .tickets-profit > ul {
   margin-top: 0;
 }
+.faq-section {
+  margin-top: .5em;
+  font-size: 1.5em;
+  border: 1px solid white;
+  padding: 1.75em 3.25em 1.5em;
+  position: relative;
+}
+.faq-section.closed {
+  padding-bottom: 1.3em;
+}
+
+.faq-section.open h3::before {
+  content: "↑";
+  color: white;
+  font-weight: 100;
+  position: absolute;
+  font-size: 1.25em;
+  top: 1.2em;
+  left: 1em;
+}
+.faq-section.closed h3::before {
+  content: "↓";
+  color: white;
+  font-weight: 100;
+  position: absolute;
+  font-size: 1.25em;
+  top: 1.3em;
+  left: 1em;
+}
+.faq-section p {
+  font-size: 24px;;
+}
+.footersubtitle {
+  font-size: 1em;
+  padding: 2em 1em;
+  color: rgba(255, 255, 255, .8);
+}
 .hero-image-0 {
   z-index: -1;
   position: absolute !important;
@@ -869,6 +906,15 @@ pre tt:after {
     /* position: relative; */
     /* top: 50%; */
     /* transform: translateY(-50%); */
+  }
+  .faq-section {
+    padding: 1.6em 1.55em 1.5em 3.25em;
+  }
+  .faq-section.closed {
+    padding-bottom: 1em;
+  }  
+  .faq-section h3, .faq-section p {
+    font-size: 0.9em;
   }
 }
 
